// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  id="default_message"
/>
`;

exports[`Render properties.content 1`] = `
<div
  id="properties.content_message"
/>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;
